# POCErlangCpp

./: CMakeLists.txt  README.md
cmake/: FindErlang.cmake
proto/: command.proto
server_src/: ErlangBufferReadHelper.hpp  ErlangCppNode.cpp  ErlangCppNode.hpp  Server.cpp  Server.hpp  main.cpp
